# speechvox

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  models.json
docs/: MODEL_CARD.md  backend-build.md  inference.md  paper-summary.md  quantization.md
src/: audio.rs  config.rs  engine.rs  ffi.rs  hotkey_settings.rs  hotkeys.rs  main.rs  model_manager.rs  models.rs  overlay.rs  tray.rs
