[package]
name = "speechvox"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
tao = "0.30"
softbuffer = "0.4"
global-hotkey = "0.6"
enigo = "0.2"
tray-icon = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
]

[build-dependencies]
cmake = "0.1"
