[package]
name = "speechvox"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
tao = "0.30"
softbuffer = "0.4"
enigo = "0.2"
tray-icon = "0.17"
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.31"
ureq = "3"
anyhow = "1.0"
parking_lot = "0.12"
crossbeam-channel = "0.5"
global-hotkey = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
]

[build-dependencies]
cc = "1.2"
winresource = "0.1.30"
